--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,16 +1,28 @@
 backend:
-  name: git-gateway
-
-local_backend: true
+  name: github
+  repo: fouix/JAMSite # Path to your GitHub repository
 
 media_folder: "static/images/uploads"
 public_folder: "/images/uploads"
 
 collections:
-  -name: "page"
-   label: "Page"
-   folder: "content/"
-   create: true
-   slug: "{{slug}}"
-   fields:
-    - {label: "Title", name: "title", widget: "string"}
+  - name: "page"
+    label: "Page"
+    folder: "content/"
+    create: true
+    slug: "{{slug}}"
+    fields:
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Author", name: "Author", widget: "select", options: ["Ray Viljoen", "Jane Doe"]}
+      - {label: "Date", name: "date", widget: "datetime"}
+      - {label: "Content", name: "body", widget: "markdown"}
+    
+  - name: "premium"
+    label: "Premium Page"
+    folder: "content/premium"
+    create: true
+    slug: "{{slug}}"
+    fields:
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Author", name: "Author", widget: "select", options: ["Ray Viljoen", "Jane Doe"]}
+      - {label: "Date", name: "date", widget: "datetime"}
